fix : 코스 자세히 보기 수정